Fixed Effect Icon/Bar Size + More Layout Issues
Made bar sizes in Render funcs (1.0, 1.0)

Altered stagger bar to match others

Flipped worst dmg type arrows upside down

Changed dmg type icons to render left->right

Trimmed some textures

Altered default best status icon size

Removed unused effectBarIconSize variable

Switched load to check before dll_main loop

Formatted effect_bar.cpp

Restored #NOMINMAX in memory.h

Made overlay.cpp `textureNames` member var

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,7 @@ project(souls_vision)
 set(CMAKE_CXX_STANDARD 23)
 
 # Define the path to the game and mods folder
-set(GAME_DIR "O:/SteamLibrary/steamapps/common/ELDEN RING/Game")
-set(MODS_DIR "${GAME_DIR}/mods")
+set(MODS_DIR "O:/SteamLibrary/steamapps/common/ELDEN RING/_Reforged/dll/active")
 set(GAME_EXE "O:/SteamLibrary/steamapps/common/ELDEN RING/_Reforged/internals/launcher/ReforgedLauncher.exe")
 
 file(COPY ${CMAKE_SOURCE_DIR}/sv_assets DESTINATION ${CMAKE_BINARY_DIR})
