--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 cmake-build-debug-visual-studio
 cmake-build-release-visual-studio
+cmake-build-relwithdebinfo
 cmake-build-debug
 cmake-build-release
 *.ttf
